--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   flutter_bloc: ^7.0.0
   equatable: ^2.0.0
+  json_annotation: ^4.6.0
+  collection: any
 
   flutter_web_plugins:
     sdk: flutter
@@ -45,7 +47,8 @@ flutter:
         fileName: seat_picker_web.dart
 
   # To add assets to your plugin package, add an assets section, like this:
-  # assets:
+  assets:
+     - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
