--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,51 +1,49 @@
 name: seat_picker
-description: A new flutter plugin project.
+description: A new Flutter plugin project.
 version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: '>=2.18.5 <3.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
+  plugin_platform_interface: ^2.0.2
   flutter_bloc: ^8.1.1
   equatable: ^2.0.0
   json_annotation: ^4.6.0
   collection: any
 
-  flutter_web_plugins:
-    sdk: flutter
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
   json_serializable: ^6.1.5
   build_runner: ^1.7.1
   flutter_gen_runner:
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
 flutter_gen:
   output: lib/gen/ # Optional (default: lib/gen/)
   line_length: 80 # Optional (default: 80)
 
-  # Optional
-  integrations:
-    flutter_svg: true
-    flare_flutter: true
-    rive: true
-    lottie: true
 
-# The following section is specific to Flutter.
+
+# For information on the generic Dart part of this file, see the
+# following page: https://dart.dev/tools/pub/pubspec
+
+# The following section is specific to Flutter packages.
 flutter:
   # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
+  # The 'pluginClass' specifies the class (in Java, Kotlin, Swift, Objective-C, etc.)
+  # which should be registered in the plugin registry. This is required for
+  # using method channels.
+  # The Android 'package' specifies package in which the registered class is.
+  # This is required for using method channels on Android.
+  # The 'ffiPlugin' specifies that native code should be built and bundled.
+  # This is required for using `dart:ffi`.
+  # All these are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
     platforms:
@@ -54,8 +52,12 @@ flutter:
         pluginClass: SeatPickerPlugin
       ios:
         pluginClass: SeatPickerPlugin
-      web:
+      linux:
         pluginClass: SeatPickerPlugin
+      macos:
+        pluginClass: SeatPickerPlugin
+      windows:
+        pluginClass: SeatPickerPluginCApi
 
   # To add assets to your plugin package, add an assets section, like this:
   assets:
@@ -67,7 +69,7 @@ flutter:
   # https://flutter.dev/assets-and-images/#from-packages
   #
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  # https://flutter.dev/assets-and-images/#resolution-aware
 
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
