--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,14 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: '>=2.18.5 <3.0.0'
   flutter: ">=2.5.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
+
+  plugin_platform_interface: ^2.1.3
   flutter_bloc: ^8.1.1
   equatable: ^2.0.0
   json_annotation: ^4.6.0
