--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: ">=2.18.5 <3.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
@@ -17,7 +17,7 @@ dependencies:
   json_annotation: ^4.6.0
   collection: any
   flutter_screenutil: ^5.7.0
-
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter_test:
@@ -30,8 +30,6 @@ dev_dependencies:
 flutter_gen:
   output: lib/gen/ # Optional (default: lib/gen/)
   line_length: 80 # Optional (default: 80)
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -64,7 +62,7 @@ flutter:
 
   # To add assets to your plugin package, add an assets section, like this:
   assets:
-     - assets/images/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   #
